[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envoice"
version = "0.1.0"
description = "Official Python SDK for envoice.dev - Generate ZUGFeRD/Factur-X invoices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "envoice.dev", email = "support@envoice.dev" }
]
keywords = [
    "envoice",
    "zugferd",
    "factur-x",
    "invoice",
    "pdf",
    "e-invoice",
    "eu",
    "en16931"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.25.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://envoice.dev"
Documentation = "https://envoice.dev/docs"
Repository = "https://github.com/steviee/envoice-clients"
Issues = "https://github.com/steviee/envoice-clients/issues"

[tool.hatch.build.targets.wheel]
packages = ["envoice"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
